# QGIS

./: .TODO.kate-swp  .gitignore  CMakeLists.txt  INSTALL  INSTALL-Androind
.github/workflows/: build-docker.yml
doc/: AUTHORS  CMakeLists.txt  index.dox  modules.dox  qgsquick.dox
images/: images.qrc
python/: CMakeLists.txt
python/analysis/: analysis_auto.sip
python/core/: conversions.sip
python/core/auto_generated/: qgsdataitem.sip.in  qgsmaplayerrenderer.sip.in  qgsmaprenderercache.sip.in  qgsmapsettings.sip.in  qgsprovidermetadata.sip.in  qgsproviderregistry.sip.in  qgsrendercontext.sip.in  qgsvectorlayer.sip.in
python/gui/auto_generated/: qgsabstractdatasourcewidget.sip.in  qgsdataitemguiprovider.sip.in  qgsdatasourceselectdialog.sip.in
src/: CMakeLists.txt
src/3d/: CMakeLists.txt
src/analysis/: CMakeLists.txt
src/analysis/mesh/: qgsmeshcalcnode.cpp  qgsmeshcalculator.cpp  qgsmeshcalcutils.cpp  qgsmeshcalcutils.h
src/app/: CMakeLists.txt  qgisapp.cpp  qgslayerstylingwidget.cpp
src/app/mesh/: qgsmeshcalculatordialog.cpp  qgsmeshcalculatordialog.h  qgsmeshdatasetgrouptree.h  qgsmeshdatasetgrouptreeview.cpp  qgsmeshdatasetgrouptreeview.h  qgsmeshlayerproperties.cpp  qgsmeshlayerproperties.h  qgsmeshrendereractivedatasetwidget.cpp  qgsmeshrendereractivedatasetwidget.h  qgsmeshrenderermeshsettingswidget.h  qgsmeshrendererscalarsettingswidget.h  qgsmeshrenderervectorsettingswidget.cpp  qgsmeshrenderervectorsettingswidget.h  qgsrenderermeshpropertieswidget.cpp  qgsrenderermeshpropertieswidget.h
src/core/: CMakeLists.txt  qgsdataitem.h  qgsdataitemproviderregistry.cpp  qgsdataprovider.h  qgsmaplayerrenderer.h  qgsmaprenderercache.cpp  qgsmaprenderercache.h  qgsmaprendererjob.cpp  qgsmaprendererparalleljob.cpp  qgsprovidermetadata.cpp  qgsprovidermetadata.h  qgsproviderregistry.cpp  qgsproviderregistry.h  qgsvectorlayer.cpp  qgsvectorlayer.h
src/core/mesh/: qgsmeshdataprovider.cpp  qgsmeshdataprovider.h  qgsmeshlayer.cpp  qgsmeshlayer.h  qgsmeshlayerinterpolator.cpp  qgsmeshlayerrenderer.cpp  qgsmeshlayerrenderer.h  qgsmeshlayerutils.cpp  qgsmeshlayerutils.h  qgsmeshmemorydataprovider.cpp  qgsmeshmemorydataprovider.h  qgsmeshrenderersettings.cpp  qgsmeshrenderersettings.h  qgsmeshtracerenderer.cpp  qgsmeshtracerenderer.h  qgsmeshvectorrenderer.cpp  qgsmeshvectorrenderer.h  qgstriangularmesh.cpp  qgstriangularmesh.h
src/core/raster/: qgscolorrampshader.cpp  qgscolorrampshader.h  qgsrasterdataprovider.cpp  qgsrasterlayerrenderer.cpp
src/gui/: CMakeLists.txt  qgsabstractdatasourcewidget.h  qgsbrowserguimodel.cpp  qgsbrowserguimodel.h  qgsdataitemguiprovider.cpp  qgsdataitemguiprovider.h  qgsdataitemguiproviderregistry.cpp  qgsdatasourceselectdialog.cpp  qgsdatasourceselectdialog.h  qgsprojectstorageguiregistry.cpp  qgsproviderguimetadata.cpp  qgsproviderguimetadata.h  qgsproviderguiregistry.cpp  qgsproviderguiregistry.h  qgssourceselectproviderregistry.cpp
src/gui/mesh/: qgsmeshdatasetgrouptree.cpp  qgsmeshdatasetgrouptree.h  qgsmeshrendereractivedatasetwidget.cpp  qgsmeshrendereractivedatasetwidget.h  qgsmeshrenderermeshsettingswidget.cpp  qgsmeshrenderermeshsettingswidget.h  qgsmeshrendererscalarsettingswidget.cpp  qgsmeshrendererscalarsettingswidget.h  qgsmeshrenderervectorsettingswidget.cpp  qgsmeshrenderervectorsettingswidget.h  qgsrenderermeshpropertieswidget.cpp  qgsrenderermeshpropertieswidget.h
src/gui/raster/: qgscolorrampshaderwidget.cpp  qgscolorrampshaderwidget.h
src/providers/arcgisrest/: qgsafsdataitems.cpp  qgsafsprovider.cpp  qgsafsprovider.h  qgsafssourceselect.cpp  qgsamsdataitems.cpp  qgsamsprovider.cpp  qgsamsprovider.h  qgsamssourceselect.cpp
src/providers/db2/: qgsdb2provider.cpp  qgsdb2provider.h
src/providers/delimitedtext/: qgsdelimitedtextprovider.cpp  qgsdelimitedtextprovider.h
src/providers/geonode/: qgsgeonodedataitems.cpp  qgsgeonodeprovider.cpp
src/quickapp/: CMakeLists.txt  config.pri  main.cpp  main.qml  qgis-quick.pro
src/quickgui/: CMakeLists.txt  mapengine.cpp  mapengine.h  mapimage.cpp  plugin.cpp  qgis_quick.h  qgsqmapcanvas.cpp  qgsqmapcanvas.h  qgsqmapcanvas.qml  qgsquickattributeformmodel.cpp  qgsquickattributeformmodel.h  qgsquickattributeformmodelbase.cpp  qgsquickattributeformmodelbase.h  qgsquickcoordinatetransformer.cpp  qgsquickcoordinatetransformer.h  qgsquickfeature.cpp  qgsquickfeature.h  qgsquickfeaturehighlight.cpp  qgsquickfeaturehighlight.h  qgsquickfeaturelayerpair.cpp  qgsquickfeaturelayerpair.h  qgsquickfeaturemodel.cpp  qgsquickfeaturemodel.h  qgsquickfeaturemodelhighlight.cpp  qgsquickfeaturemodelhighlight.h  qgsquickgeometry.cpp  qgsquickgeometry.h  qgsquickhighlightsgnode.cpp  qgsquickhighlightsgnode.h  qgsquickhighlightsnode.cpp  qgsquickhighlightsnode.h  qgsquickidentifykit.cpp  qgsquickidentifykit.h  qgsquickidentifyresult.cpp  qgsquickidentifyresult.h  qgsquicklayertreemodel.cpp  qgsquicklayertreemodel.h  qgsquicklayertreeview.qml  qgsquickmapcanvas.cpp  qgsquickmapcanvas.h  (+35 more)
src/quickgui/attributes/: qgsquickattributeformmodel.cpp  qgsquickattributeformmodel.h  qgsquickattributeformmodelbase.cpp  qgsquickattributeformmodelbase.h  qgsquickattributemodel.cpp  qgsquickattributemodel.h
src/quickgui/images/: create-images.sh  images.qrc
src/quickgui/plugin/: CMakeLists.txt  qgsquickbutton.qml  qgsquickdigitizingtoolbar.qml  qgsquickfeatureform.qml  qgsquickfeatureformstyling.qml  qgsquickmapcanvas.qml  qgsquickmessagelog.qml  qgsquickphotocontainer.qml  qgsquickphotopanel.qml  qgsquickplugin.cpp  qgsquickpositionmarker.qml  qgsquickscalebar.qml  qmldir
src/quickgui/plugin/editor/: qgsquickcheckbox.qml  qgsquickdatetime.qml  qgsquickexternalresource.qml  qgsquickrelationreference.qml  qgsquicktextedit.qml  qgsquickvaluemap.qml
src/quickgui/plugin/js/: qgsquickstyle.js
src/quickgui/qml/: qgsquickmapcanvas.qml  qmldir
src/quickgui/qml/editor/: qgsquickdatetime.qml  qgsquickexternalresource.qml  qgsquickrelationreference.qml
src/ui/: qgsrasterlayerpropertiesbase.ui  qgssinglebandpseudocolorrendererwidgetbase.ui
tests/src/: CMakeLists.txt
tests/testdata/: polys.dbf
(+89 files in other folders)
